// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Model Plan Documents page > matches snapshot 1`] = `
<DocumentFragment>
  <main
    class="mint-main-content"
    data-testid="model-documents"
    id="main-content"
    role="main"
    tabindex="-1"
  >
    <div
      class="grid-container"
      data-testid="gridContainer"
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <nav
          aria-label="Breadcrumbs"
          class="usa-breadcrumb usa-breadcrumb--wrap"
        >
          <ol
            class="usa-breadcrumb__list"
          >
            <li
              class="usa-breadcrumb__list-item"
            >
              <a
                class="usa-link usa-breadcrumb__link"
                href="/"
              >
                <span>
                  Home
                </span>
              </a>
            </li>
            <li
              class="usa-breadcrumb__list-item"
            >
              <a
                class="usa-link usa-breadcrumb__link"
                href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area"
              >
                <span>
                  Model collaboration area
                </span>
              </a>
            </li>
            <li
              class="usa-breadcrumb__list-item"
            >
              <a
                class="usa-link usa-breadcrumb__link"
                href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list"
              >
                <span>
                  Model Plan Task List
                </span>
              </a>
            </li>
            <li
              aria-current="page"
              class="usa-breadcrumb__list-item usa-current"
            >
              <span>
                Documents
              </span>
            </li>
          </ol>
        </nav>
        <h1
          aria-live="polite"
          class="mint-h1 margin-top-4 margin-bottom-0"
          tabindex="-1"
        >
          Documents
        </h1>
        <p
          class="margin-top-0 margin-bottom-2 font-body-lg"
          data-testid="model-plan-name"
        >
          for 
        </p>
        <p
          class="margin-bottom-2 font-body-md line-height-body-4"
        >
          Upload any documents relevant to your Model Plan.  This could include recent concept documents, policy papers, or any additional model background information.
        </p>
        <a
          class="usa-link display-inline-flex flex-align-center margin-y-3"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list"
        >
          <svg
            aria-hidden="true"
            class="usa-icon margin-right-1"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
            />
          </svg>
          Return to Model Plan task list
        </a>
        <h4
          class="margin-top-2 margin-bottom-1"
        >
          Documents
        </h4>
        <a
          class="usa-button"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/documents/add-document"
        >
          Add a document
        </a>
        <div
          class=""
        >
          <div
            class="model-plan-table"
            data-testid="model-plan-documents-table"
          >
            <div
              class="usa-table-container--scrollable"
              data-testid="scrollable-table-container"
              tabindex="0"
            >
              <table
                class="usa-table usa-table--borderless width-full"
                data-testid="table"
              >
                <caption
                  class="usa-sr-only"
                >
                  requestsTable.caption
                </caption>
                <thead>
                  <tr
                    role="row"
                  >
                    <th
                      aria-sort="none"
                      class="table-header"
                      colspan="1"
                      role="columnheader"
                      scope="col"
                      style="min-width: 138px; padding-left: 0px; padding-bottom: .5rem; position: relative;"
                    >
                      <button
                        class="usa-button usa-button--unstyled position-relative"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                        type="button"
                      >
                        File Name
                        <svg
                          class="usa-icon margin-left-05 position-absolute"
                          data-testid="caret--sort"
                          focusable="false"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 5.83 15.17 9l1.41-1.41L12 3 7.41 7.59 8.83 9 12 5.83zm0 12.34L8.83 15l-1.41 1.41L12 21l4.59-4.59L15.17 15 12 18.17z"
                          />
                        </svg>
                      </button>
                    </th>
                    <th
                      aria-sort="none"
                      class="table-header"
                      colspan="1"
                      role="columnheader"
                      scope="col"
                      style="min-width: 138px; padding-left: 0px; padding-bottom: .5rem; position: relative;"
                    >
                      <button
                        class="usa-button usa-button--unstyled position-relative"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                        type="button"
                      >
                        Document Type
                        <svg
                          class="usa-icon margin-left-05 position-absolute"
                          data-testid="caret--sort"
                          focusable="false"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 5.83 15.17 9l1.41-1.41L12 3 7.41 7.59 8.83 9 12 5.83zm0 12.34L8.83 15l-1.41 1.41L12 21l4.59-4.59L15.17 15 12 18.17z"
                          />
                        </svg>
                      </button>
                    </th>
                    <th
                      aria-sort="none"
                      class="table-header"
                      colspan="1"
                      role="columnheader"
                      scope="col"
                      style="min-width: 138px; padding-left: 0px; padding-bottom: .5rem; position: relative;"
                    >
                      <button
                        class="usa-button usa-button--unstyled position-relative"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                        type="button"
                      >
                        Notes
                        <svg
                          class="usa-icon margin-left-05 position-absolute"
                          data-testid="caret--sort"
                          focusable="false"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 5.83 15.17 9l1.41-1.41L12 3 7.41 7.59 8.83 9 12 5.83zm0 12.34L8.83 15l-1.41 1.41L12 21l4.59-4.59L15.17 15 12 18.17z"
                          />
                        </svg>
                      </button>
                    </th>
                    <th
                      aria-sort="none"
                      class="table-header"
                      colspan="1"
                      role="columnheader"
                      scope="col"
                      style="min-width: 138px; padding-left: 0px; padding-bottom: .5rem; position: relative;"
                    >
                      <button
                        class="usa-button usa-button--unstyled position-relative"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                        type="button"
                      >
                        Upload date
                        <svg
                          class="usa-icon margin-left-05 position-absolute"
                          data-testid="caret--sort"
                          focusable="false"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 5.83 15.17 9l1.41-1.41L12 3 7.41 7.59 8.83 9 12 5.83zm0 12.34L8.83 15l-1.41 1.41L12 21l4.59-4.59L15.17 15 12 18.17z"
                          />
                        </svg>
                      </button>
                    </th>
                    <th
                      aria-sort="none"
                      class="table-header"
                      colspan="1"
                      role="columnheader"
                      scope="col"
                      style="min-width: 138px; padding-left: 0px; padding-bottom: .5rem; position: relative;"
                    >
                      <button
                        class="usa-button usa-button--unstyled position-relative"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                        type="button"
                      >
                        Visibility
                        <svg
                          class="usa-icon margin-left-05 position-absolute"
                          data-testid="caret--sort"
                          focusable="false"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 5.83 15.17 9l1.41-1.41L12 3 7.41 7.59 8.83 9 12 5.83zm0 12.34L8.83 15l-1.41 1.41L12 21l4.59-4.59L15.17 15 12 18.17z"
                          />
                        </svg>
                      </button>
                    </th>
                    <th
                      aria-sort="none"
                      class="table-header"
                      colspan="1"
                      role="columnheader"
                      scope="col"
                      style="min-width: 138px; padding-left: 0px; padding-bottom: .5rem; position: relative;"
                    >
                      <button
                        class="usa-button usa-button--unstyled position-relative"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                        type="button"
                      >
                        Actions
                        <svg
                          class="usa-icon margin-left-05 position-absolute"
                          data-testid="caret--sort"
                          focusable="false"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 5.83 15.17 9l1.41-1.41L12 3 7.41 7.59 8.83 9 12 5.83zm0 12.34L8.83 15l-1.41 1.41L12 21l4.59-4.59L15.17 15 12 18.17z"
                          />
                        </svg>
                      </button>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    role="row"
                  >
                    <th
                      role="cell"
                      scope="row"
                      style="padding-left: 0px;"
                    >
                      Second document
                    </th>
                    <td
                      role="cell"
                      style="padding-left: 0px; white-space: normal;"
                    >
                      Concept Paper
                    </td>
                    <td
                      role="cell"
                      style="padding-left: 0px; white-space: normal;"
                    />
                    <td
                      role="cell"
                      style="padding-left: 0px; white-space: normal;"
                    >
                      02/16/2023
                    </td>
                    <td
                      role="cell"
                      style="padding-left: 0px; white-space: normal;"
                    >
                      All
                    </td>
                    <td
                      role="cell"
                      style="padding-left: 0px; padding-right: 0px;"
                    >
                      <button
                        class="usa-button usa-button--unstyled margin-right-2"
                        data-testid="button"
                        type="button"
                      >
                        <span
                          class="display-flex flex-align-center"
                        >
                          View
                          <svg
                            class="usa-icon"
                            focusable="false"
                            height="1em"
                            role="img"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                            />
                          </svg>
                        </span>
                      </button>
                      <button
                        class="usa-button usa-button--unstyled text-red"
                        data-testid="remove-document"
                        type="button"
                      >
                        Remove
                      </button>
                    </td>
                  </tr>
                  <tr
                    role="row"
                  >
                    <th
                      role="cell"
                      scope="row"
                      style="padding-left: 0px;"
                    >
                      My MINT document
                    </th>
                    <td
                      role="cell"
                      style="padding-left: 0px; white-space: normal;"
                    >
                      Concept Paper
                    </td>
                    <td
                      role="cell"
                      style="padding-left: 0px; white-space: normal;"
                    />
                    <td
                      role="cell"
                      style="padding-left: 0px; white-space: normal;"
                    >
                      02/16/2023
                    </td>
                    <td
                      role="cell"
                      style="padding-left: 0px; white-space: normal;"
                    >
                      All
                    </td>
                    <td
                      role="cell"
                      style="padding-left: 0px; padding-right: 0px;"
                    >
                      <button
                        class="usa-button usa-button--unstyled margin-right-2"
                        data-testid="button"
                        type="button"
                      >
                        <span
                          class="display-flex flex-align-center"
                        >
                          View
                          <svg
                            class="usa-icon"
                            focusable="false"
                            height="1em"
                            role="img"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                            />
                          </svg>
                        </span>
                      </button>
                      <button
                        class="usa-button usa-button--unstyled text-red"
                        data-testid="remove-document"
                        type="button"
                      >
                        Remove
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div
              aria-live="polite"
              class="usa-sr-only usa-table__announcement-region"
            >
              Requests table reset to default sort order
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Operational Solutions Link Documents > matches snapshot 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumbs"
    class="usa-breadcrumb usa-breadcrumb--wrap"
  >
    <ol
      class="usa-breadcrumb__list"
    >
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/"
        >
          <span>
            Home
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area"
        >
          <span>
            Model collaboration area
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list"
        >
          <span>
            Model Plan Task List
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list/it-solutions"
        >
          <span>
            Operational solutions and implementation status tracker
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list/it-solutions/undefined/undefined/solution-details"
        >
          <span>
            Solution details
          </span>
        </a>
      </li>
      <li
        aria-current="page"
        class="usa-breadcrumb__list-item usa-current"
      >
        <span>
          Connect existing documents
        </span>
      </li>
    </ol>
  </nav>
  <div
    class="grid-row grid-gap"
    data-testid="grid"
  >
    <div
      class="desktop:grid-col-9"
      data-testid="grid"
    >
      <div
        class="tablet:grid-col-11"
        data-testid="grid"
      >
        <h1
          aria-live="polite"
          class="mint-h1 margin-top-4 margin-bottom-1"
          tabindex="-1"
        >
          Connect existing documents
        </h1>
        <p
          class="margin-top-0 margin-bottom-1 font-body-lg"
          data-testid="model-plan-name"
        >
          for 
        </p>
        <p
          class="line-height-body-4 margin-bottom-4 margin-top-1"
        >
          Connect any model documents previously added that are associated with this solution.
        </p>
        <div
          class="tablet:grid-col-8"
          data-testid="grid"
        >
          <div
            class="grid-container padding-3 bg-base-lightest maxw-none"
            data-testid="gridContainer"
          >
            <div
              class="grid-row"
              data-testid="grid"
            >
              <div
                class="desktop:grid-col-12"
                data-testid="grid"
              >
                <p
                  class="text-bold margin-y-1"
                >
                  Operational need
                </p>
                <p
                  class="margin-top-0 font-body-sm"
                >
                  Obtain an application support contractor
                </p>
              </div>
              <div
                class="desktop:grid-col-12"
                data-testid="grid"
              >
                <button
                  class="usa-button usa-button--unstyled display-flex flex-align-center text-ls-1 deep-underline margin-bottom-1 margin-top-1"
                  data-testid="toggle-need-answer"
                  type="button"
                >
                  <svg
                    class="usa-icon margin-right-05 needs-question__rotate"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                    />
                  </svg>
                  Why is this a part of my operational needs?
                </button>
                <div>
                  <p
                    class="text-bold margin-top-4"
                  >
                    Solution
                  </p>
                  <ul
                    class="usa-card-group flex-column flex-no-wrap"
                    data-testid="CardGroup"
                  >
                    <li
                      class="usa-card solution-card"
                      data-testid="Card"
                    >
                      <div
                        class="usa-card__container"
                      >
                        <div
                          class="padding-3"
                        >
                          <h3
                            class="margin-top-0 solutions-checkbox__header margin-bottom-2"
                          >
                            My custom solution
                          </h3>
                          <div
                            class="tablet:grid-col-6"
                            data-testid="grid"
                          >
                            <p
                              class="text-bold margin-bottom-0"
                            >
                              Point of contact
                            </p>
                            <p
                              class="margin-y-0"
                            >
                              John Doe
                            </p>
                            <a
                              aria-label="Send an email"
                              class="usa-link line-height-body-5 display-flex flex-align-center"
                              href="mailto:j.doe@oddball.io"
                              target="_blank"
                            >
                              <div>
                                j.doe@oddball.io
                              </div>
                              <svg
                                class="usa-icon margin-left-05 text-tbottom"
                                focusable="false"
                                height="1em"
                                role="img"
                                viewBox="0 0 24 24"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z"
                                />
                              </svg>
                            </a>
                          </div>
                          <div
                            class="mint-divider margin-top-2"
                          />
                          <div
                            class="display-flex margin-top-2"
                            data-testid="custom-solution-card"
                          >
                            <a
                              class="usa-link margin-right-2 display-flex flex-align-center"
                              href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list/it-solutions/081cb879-bd6f-4ead-b9cb-3a299de76390/add-custom-solution/081cb879-bd6f-4ead-b9cb-3a299de76390"
                            >
                              Update these details
                              <svg
                                class="usa-icon margin-left-1"
                                focusable="false"
                                height="1em"
                                role="img"
                                viewBox="0 0 24 24"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                                />
                              </svg>
                            </a>
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h3
    class="margin-top-8 margin-bottom-neg-1"
  >
    Documents
  </h3>
  <div
    class=""
  >
    <div
      class="model-plan-table"
      data-testid="model-plan-documents-table"
    >
      <div
        class="usa-table-container--scrollable"
        data-testid="scrollable-table-container"
        tabindex="0"
      >
        <table
          class="usa-table usa-table--borderless width-full"
          data-testid="table"
        >
          <caption
            class="usa-sr-only"
          >
            requestsTable.caption
          </caption>
          <thead>
            <tr
              role="row"
            >
              <th
                aria-sort="none"
                class="table-header"
                colspan="1"
                role="columnheader"
                scope="col"
                style="min-width: 138px; padding-left: 0px; padding-bottom: .5rem; position: relative;"
              >
                <button
                  class="usa-button usa-button--unstyled position-relative"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                  type="button"
                >
                  File Name
                  <svg
                    class="usa-icon margin-left-05 position-absolute"
                    data-testid="caret--sort"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 5.83 15.17 9l1.41-1.41L12 3 7.41 7.59 8.83 9 12 5.83zm0 12.34L8.83 15l-1.41 1.41L12 21l4.59-4.59L15.17 15 12 18.17z"
                    />
                  </svg>
                </button>
              </th>
              <th
                aria-sort="none"
                class="table-header"
                colspan="1"
                role="columnheader"
                scope="col"
                style="min-width: 138px; padding-left: 0px; padding-bottom: .5rem; position: relative;"
              >
                <button
                  class="usa-button usa-button--unstyled position-relative"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                  type="button"
                >
                  Document Type
                  <svg
                    class="usa-icon margin-left-05 position-absolute"
                    data-testid="caret--sort"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 5.83 15.17 9l1.41-1.41L12 3 7.41 7.59 8.83 9 12 5.83zm0 12.34L8.83 15l-1.41 1.41L12 21l4.59-4.59L15.17 15 12 18.17z"
                    />
                  </svg>
                </button>
              </th>
              <th
                aria-sort="none"
                class="table-header"
                colspan="1"
                role="columnheader"
                scope="col"
                style="min-width: 138px; padding-left: 0px; padding-bottom: .5rem; position: relative;"
              >
                <button
                  class="usa-button usa-button--unstyled position-relative"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                  type="button"
                >
                  Notes
                  <svg
                    class="usa-icon margin-left-05 position-absolute"
                    data-testid="caret--sort"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 5.83 15.17 9l1.41-1.41L12 3 7.41 7.59 8.83 9 12 5.83zm0 12.34L8.83 15l-1.41 1.41L12 21l4.59-4.59L15.17 15 12 18.17z"
                    />
                  </svg>
                </button>
              </th>
              <th
                aria-sort="none"
                class="table-header"
                colspan="1"
                role="columnheader"
                scope="col"
                style="min-width: 138px; padding-left: 0px; padding-bottom: .5rem; position: relative;"
              >
                <button
                  class="usa-button usa-button--unstyled position-relative"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                  type="button"
                >
                  Upload date
                  <svg
                    class="usa-icon margin-left-05 position-absolute"
                    data-testid="caret--sort"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 5.83 15.17 9l1.41-1.41L12 3 7.41 7.59 8.83 9 12 5.83zm0 12.34L8.83 15l-1.41 1.41L12 21l4.59-4.59L15.17 15 12 18.17z"
                    />
                  </svg>
                </button>
              </th>
              <th
                aria-sort="none"
                class="table-header"
                colspan="1"
                role="columnheader"
                scope="col"
                style="min-width: 138px; padding-left: 0px; padding-bottom: .5rem; position: relative;"
              >
                <button
                  class="usa-button usa-button--unstyled position-relative"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                  type="button"
                >
                  Visibility
                  <svg
                    class="usa-icon margin-left-05 position-absolute"
                    data-testid="caret--sort"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 5.83 15.17 9l1.41-1.41L12 3 7.41 7.59 8.83 9 12 5.83zm0 12.34L8.83 15l-1.41 1.41L12 21l4.59-4.59L15.17 15 12 18.17z"
                    />
                  </svg>
                </button>
              </th>
              <th
                aria-sort="none"
                class="table-header"
                colspan="1"
                role="columnheader"
                scope="col"
                style="min-width: 138px; padding-left: 0px; padding-bottom: .5rem; position: relative;"
              >
                <button
                  class="usa-button usa-button--unstyled position-relative"
                  style="cursor: pointer;"
                  title="Toggle SortBy"
                  type="button"
                >
                  Actions
                  <svg
                    class="usa-icon margin-left-05 position-absolute"
                    data-testid="caret--sort"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 5.83 15.17 9l1.41-1.41L12 3 7.41 7.59 8.83 9 12 5.83zm0 12.34L8.83 15l-1.41 1.41L12 21l4.59-4.59L15.17 15 12 18.17z"
                    />
                  </svg>
                </button>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              role="row"
            >
              <th
                role="cell"
                scope="row"
                style="padding-left: 0px;"
              >
                <div
                  class="usa-checkbox"
                  data-testid="checkbox"
                >
                  <input
                    class="usa-checkbox__input"
                    data-testid="link-document-9d828454-9ecd-42a0-ad84-bc8c8ddea634"
                    id="link-document-9d828454-9ecd-42a0-ad84-bc8c8ddea634"
                    name="link-document-9d828454-9ecd-42a0-ad84-bc8c8ddea634"
                    type="checkbox"
                  />
                  <label
                    class="usa-checkbox__label"
                    for="link-document-9d828454-9ecd-42a0-ad84-bc8c8ddea634"
                  >
                    Second document
                  </label>
                </div>
              </th>
              <td
                role="cell"
                style="padding-left: 0px; white-space: normal;"
              >
                Concept Paper
              </td>
              <td
                role="cell"
                style="padding-left: 0px; white-space: normal;"
              />
              <td
                role="cell"
                style="padding-left: 0px; white-space: normal;"
              >
                02/16/2023
              </td>
              <td
                role="cell"
                style="padding-left: 0px; white-space: normal;"
              >
                All
              </td>
              <td
                role="cell"
                style="padding-left: 0px; padding-right: 0px;"
              >
                <button
                  class="usa-button usa-button--unstyled margin-right-2"
                  data-testid="button"
                  type="button"
                >
                  <span
                    class="display-flex flex-align-center"
                  >
                    View
                    <svg
                      class="usa-icon"
                      focusable="false"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                      />
                    </svg>
                  </span>
                </button>
              </td>
            </tr>
            <tr
              role="row"
            >
              <th
                role="cell"
                scope="row"
                style="padding-left: 0px;"
              >
                <div
                  class="usa-checkbox"
                  data-testid="checkbox"
                >
                  <input
                    checked=""
                    class="usa-checkbox__input"
                    data-testid="link-document-07d0d06f-9ecd-42a0-ad84-bc8c8ddea084"
                    id="link-document-07d0d06f-9ecd-42a0-ad84-bc8c8ddea084"
                    name="link-document-07d0d06f-9ecd-42a0-ad84-bc8c8ddea084"
                    type="checkbox"
                  />
                  <label
                    class="usa-checkbox__label"
                    for="link-document-07d0d06f-9ecd-42a0-ad84-bc8c8ddea084"
                  >
                    My MINT document
                  </label>
                </div>
              </th>
              <td
                role="cell"
                style="padding-left: 0px; white-space: normal;"
              >
                Concept Paper
              </td>
              <td
                role="cell"
                style="padding-left: 0px; white-space: normal;"
              />
              <td
                role="cell"
                style="padding-left: 0px; white-space: normal;"
              >
                02/16/2023
              </td>
              <td
                role="cell"
                style="padding-left: 0px; white-space: normal;"
              >
                All
              </td>
              <td
                role="cell"
                style="padding-left: 0px; padding-right: 0px;"
              >
                <button
                  class="usa-button usa-button--unstyled margin-right-2"
                  data-testid="button"
                  type="button"
                >
                  <span
                    class="display-flex flex-align-center"
                  >
                    View
                    <svg
                      class="usa-icon"
                      focusable="false"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
                      />
                    </svg>
                  </span>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        aria-live="polite"
        class="usa-sr-only usa-table__announcement-region"
      >
        Requests table reset to default sort order
      </div>
    </div>
  </div>
  <div
    class="tablet:grid-col-6"
    data-testid="grid"
  >
    <button
      class="usa-button display-inline-flex flex-align-center margin-y-3"
      data-testid="link-documents-button"
      disabled=""
      type="button"
    >
      Connect documents
    </button>
    <a
      class="usa-link display-flex"
      href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list/it-solutions/081cb879-bd6f-4ead-b9cb-3a299de76390/081cb879-bd6f-4ead-b9cb-3a299de76390/solution-details"
    >
      <svg
        aria-hidden="true"
        class="usa-icon margin-right-1"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
      Don’t connect documents and return to solution details
    </a>
  </div>
  <div
    class="desktop:grid-col-12 padding-x-1"
    data-testid="grid"
  >
    <div
      class="border-top-05 border-primary-lighter padding-top-2 margin-top-4"
    >
      <div
        class="padding-2 bg-primary-lighter"
      >
        <p
          class="text-bold margin-top-0"
        >
          Don’t know what to do next?
        </p>
        <div
          class="display-flex"
          data-testid="ask-a-question"
        >
          <svg
            class="usa-icon text-primary margin-right-1"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 9h-2V5h2v6zm0 4h-2v-2h2v2z"
            />
          </svg>
          <button
            class="usa-button usa-button--unstyled"
            data-testid="ask-a-question-button"
            type="button"
          >
            Start a discussion
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
